[gd_scene load_steps=8 format=2]

[ext_resource path="res://menu/Map3_2.gd" type="Script" id=1]
[ext_resource path="res://ASSERTS/inside/pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ASSERTS/inside/river_map_2.png" type="Texture" id=3]
[ext_resource path="res://ASSERTS/inside/confirmation_001.ogg" type="AudioStream" id=4]
[ext_resource path="res://ASSERTS/inside/icielBrandonText-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 17
font_data = ExtResource( 5 )

[node name="Map3_2" type="Node2D"]
script = ExtResource( 1 )

[node name="RiverMap2" type="Sprite" parent="."]
position = Vector2( 525.556, 299.75 )
scale = Vector2( 0.556018, 0.556018 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 24.0
margin_top = 66.0
margin_right = 127.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0.560784, 0.372549, 0.294118, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "#####"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 887.0
margin_top = 539.0
margin_right = 989.0
margin_bottom = 582.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ship_Map" type="Button" parent="."]
margin_left = 186.0
margin_top = 170.0
margin_right = 462.0
margin_bottom = 447.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ship_Map2" type="Button" parent="."]
margin_left = 201.0
margin_top = 467.0
margin_right = 437.0
margin_bottom = 503.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mem_Map" type="Button" parent="."]
margin_left = 577.0
margin_top = 170.0
margin_right = 853.0
margin_bottom = 444.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mem_Map2" type="Button" parent="."]
margin_left = 593.0
margin_top = 470.0
margin_right = 828.0
margin_bottom = 505.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Label2" type="Label" parent="."]
margin_left = 73.0
margin_top = 29.0
margin_right = 219.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0.560784, 0.372549, 0.294118, 1 )
custom_fonts/font = SubResource( 2 )
text = "###"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Ship_Map" to="." method="_on_Ship_Map_pressed"]
[connection signal="pressed" from="Ship_Map2" to="." method="_on_Ship_Map_pressed"]
[connection signal="pressed" from="Mem_Map" to="." method="_on_Mem_Map_pressed"]
[connection signal="pressed" from="Mem_Map2" to="." method="_on_Mem_Map_pressed"]
